--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:paddingHorizontal="10dp"
+        android:paddingBottom="90dp">
 
         <TextView
             android:id="@+id/text_home"
@@ -45,32 +46,23 @@
             android:justificationMode="inter_word"
             android:text="@string/description_indexhome"/>
 
-        <ImageView
-            android:id="@+id/qr_code"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_marginBottom="15dp"
-            android:layout_gravity="center"
-            android:src="@drawable/logouns"
-            android:contentDescription="@string/description_home" />
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="15dp"
-            android:layout_marginLeft="15dp"
+            android:layout_marginVertical="8dp"
             android:textColor="@color/black"
-            android:textSize="17sp"
+            android:textSize="21sp"
             android:fontFamily="@font/koho"
             android:textAlignment="center"
+            android:textStyle="bold"
             android:justificationMode="inter_word"
-            android:text="News Articles" />
+            android:text="@string/berita_terkini" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/news_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_marginBottom="60dp"
             android:scrollbars="horizontal" />
 
