--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -1,26 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginRight="15dp"
-    android:padding="8dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:contentPadding="10dp"
+    android:layout_marginBottom="10dp"
+    app:cardBackgroundColor="@color/cardviewnews"
+    app:cardCornerRadius="15dp">
 
-    <ImageView
-        android:id="@+id/news_image"
-        android:src="@drawable/news_image1"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:contentDescription="News Image" />
-
-    <TextView
-        android:id="@+id/news_title"
-        android:text="@string/judul_news1"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:paddingTop="8dp" />
+        android:orientation="horizontal" >
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/news_image"
+            android:contentDescription="@string/news_image"
+            android:src="@drawable/news_image1"
+            android:layout_gravity="center_vertical"
+            android:layout_width="150dp"
+            android:layout_height="100dp" />
+
+        <TextView
+            android:id="@+id/news_title"
+            android:text="@string/judul_news1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:padding="10dp"
+            android:textColor="@color/white"
+            android:justificationMode="inter_word"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+</com.google.android.material.card.MaterialCardView>
