--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="honey">#f0fff0</color>
     <color name="grey">#d3d3d3</color>
     <color name="blue">#a4a4eb</color>
+
+    <color name="cardviewnews">#FF6196B8</color>
 </resources>
