--- a/app/src/main/res/layout/procedure_item.xml
+++ b/app/src/main/res/layout/procedure_item.xml
@@ -44,5 +44,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/item_number"
         app:layout_constraintTop_toBottomOf="@id/item_title"
+        app:layout_constraintBottom_toTopOf="@id/item_link"/>
+
+    <TextView
+        android:id="@+id/item_link"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:text="@string/unduh_template"
+        android:textColor="@android:color/holo_blue_dark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/item_number"
+        app:layout_constraintTop_toBottomOf="@id/item_content"
         app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
