--- a/app/src/main/res/layout/fragment_daftar.xml
+++ b/app/src/main/res/layout/fragment_daftar.xml
@@ -12,7 +12,7 @@
         android:id="@+id/headingText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Daftar Kerjasama"
+        android:text="@string/kerjasama_header"
         android:textSize="32sp"
         android:textStyle="bold"
         android:fontFamily="serif"
@@ -28,7 +28,7 @@
         android:id="@+id/button1"
         android:layout_width="0dp"
         android:layout_height="64dp"
-        android:text="Kerjasama ASEAN"
+        android:text="@string/kerjasama_asean"
         android:layout_marginTop="48dp"
         android:background="@drawable/button_outline"
         android:textColor="@color/black"
@@ -44,7 +44,7 @@
         android:id="@+id/button2"
         android:layout_width="0dp"
         android:layout_height="64dp"
-        android:text="Kerjasama Asia"
+        android:text="@string/kerjasama_asia"
         android:layout_marginTop="48dp"
         android:background="@drawable/button_outline2"
         android:textColor="@color/black"
@@ -59,7 +59,7 @@
         android:id="@+id/button3"
         android:layout_width="0dp"
         android:layout_height="64dp"
-        android:text="Kerjasama Eropa"
+        android:text="@string/kerjasama_eropa"
         android:background="@drawable/button_outline2"
         android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/button1"
@@ -75,7 +75,7 @@
         android:id="@+id/button4"
         android:layout_width="0dp"
         android:layout_height="64dp"
-        android:text="Kerjasama Afrika"
+        android:text="@string/kerjasama_afrika"
         android:background="@drawable/button_outline"
         android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/button2"
@@ -90,7 +90,7 @@
         android:id="@+id/button5"
         android:layout_width="0dp"
         android:layout_height="64dp"
-        android:text="Kerjasama Amerika"
+        android:text="@string/kerjasama_amerika"
         android:background="@drawable/button_outline"
         android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/button3"
@@ -106,7 +106,7 @@
         android:id="@+id/button6"
         android:layout_width="0dp"
         android:layout_height="64dp"
-        android:text="Kerjasama Australia"
+        android:text="@string/kerjasama_australia"
         android:background="@drawable/button_outline2"
         android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/button4"
@@ -121,7 +121,7 @@
         android:id="@+id/button7"
         android:layout_width="0dp"
         android:layout_height="64dp"
-        android:text="Kerjasama Dalam Negeri"
+        android:text="@string/kerjasama_dalam_negeri"
         android:background="@drawable/button_outline2"
         android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/button5"
