--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -39,6 +39,8 @@
             android:layout_marginRight="15dp"
             android:layout_marginLeft="15dp"
             android:layout_marginBottom="15dp"
+            android:background="@drawable/border_graphic"
+            android:padding="10dp"
             android:textColor="@color/black"
             android:textSize="17sp"
             android:fontFamily="@font/koho"
@@ -49,9 +51,13 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginBottom="15dp"
             android:textColor="@color/black"
             android:textSize="21sp"
+            android:background="@drawable/border_graphic"
+            android:padding="10dp"
             android:fontFamily="@font/koho"
             android:textAlignment="center"
             android:textStyle="bold"
@@ -62,8 +68,10 @@
             android:id="@+id/news_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp"
             android:orientation="vertical"
-            android:layout_marginBottom="60dp"
+            android:layout_marginBottom="20dp"
             android:scrollbars="horizontal" />
 
     </LinearLayout>
